samples/_failures_safe/1761607063_e1756b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f06ddc9c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f06ddc9c.c:176:5: error: expected declaration or statement at end of input
  176 |     }
      |     ^
